revemod deprecated options